# reallycheap-twenty-public

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-mac.yml
Source/core/: MacroController.cpp  MacroController.h  MacroStub.h  Params.cpp  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.cpp  Presets.h
Source/dsp/: Digital.cpp  Digital.h  Digital_simple_test.cpp  Distort.cpp  Distort.h  Magnetic.cpp  Magnetic.h  Noise.cpp  Noise.h  Space.cpp  Space.h  Wobble.cpp  Wobble.h
Source/dsp/noise/: NoiseAssetManager.cpp  NoiseAssetManager.h
Source/dsp/space/: SpaceIRManager.cpp  SpaceIRManager.h
Source/ui/: LookAndFeel.cpp  LookAndFeel.h
Source/ui/ModulePanels/: DigitalPanel.cpp  DigitalPanel.h  DistortPanel.cpp  DistortPanel.h  MagneticPanel.cpp  MagneticPanel.h  NoisePanel.cpp  NoisePanel.h  SpacePanel.cpp  SpacePanel.h  WobblePanel.cpp  WobblePanel.h
assets/irs/: README.md
assets/noise/: README.md
presets/factory/: Broadcast.rc20preset  Cheap Spring.rc20preset  Dusty Tape.rc20preset  Mall PA.rc20preset  Subtle Glue.rc20preset  VHS Yearbook.rc20preset  Vinyl Floor.rc20preset  Warped Cassette.rc20preset
